--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
 <body>
 
   <!-- Preloader-->
-  <div class="preloader">
+
+  <div class="loader">
+    <img src="images/load-gif.gif" alt="">
+  </div>
+
+  <!-- <div class="preloader">
     <div class="loader">
 
     </div>
-  </div>
+  </div> -->
  
   <!-- Preloader End-->
 
@@ -681,10 +686,8 @@
 
   <!-- Template javaScipt -->
   <script src="js/script.js"></script>
-
   <!-- Live Style Switcher-Demo Only  -->
   <script src="js/styleSwitcher.js"></script>
-
 
 </body>
 
