icon in title tab
added icon in title bar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>MyPortfolioSite</title>
+  <link rel="icon" type="image/png"  href="/person.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Template css Files -->
@@ -28,14 +29,9 @@
     <img src="images/load-gif.gif" alt="">
   </div>
 
-  <!-- <div class="preloader">
-    <div class="loader">
-
-    </div>
-  </div> -->
- 
   <!-- Preloader End-->
 
+  <div>Icons made by <a href="https://www.flaticon.com/free-icon/man_2922524?term=person&page=1&position=26" title="Vitaly Gorbachev">Vitaly Gorbachev</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   <!-- Main Container -->
   <div class="main-container">
     <!-- Aside -->
