--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <div class="loader">
     <img src="images/load-gif.gif" alt="">
   </div>
+  <div class="loader-message"><h5 style="color: #ffffff;">please wait a moment...</h5></div>
 
   <!-- Preloader End-->
 
